# project_recruitment

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile.discovery  Dockerfile.processing  MIGRATION_PLAN.md  PROJECT_SETUP.md  README.md  clear_db.py  docker-compose.yml  env.example  hello.py  mypy.ini  populate_queue.py  pyproject.toml  recruitment_ad_search.py  setup.py  storage.py  streamlit_app.py  url_discovery_service.py
ci/: github_actions.yml
docker/: discovery.Dockerfile  processing.Dockerfile
libraries/: __init__.py  web_crawler_lib.py
recruitment/: __init__.py  batch_processor.py  config_validator.py  logging_config.py  rabbitmq_utils.py  recruitment_db.py  recruitment_models.py  response_processor_functions.py  storage.py  url_discovery_service.py
recruitment/migrations/: add_raw_content.sql
recruitment/services/discovery/: url_discovery_service.py
scripts/: ci_smoke_test.sh  populate_queue.py
services/discovery/: url_discovery_service.py
src/recruitment/: __init__.py  config.py  logging_config.py  process_urls_from_queue.py  rabbitmq_utils.py  recruitment_db.py  utils.py  web_crawler_lib.py
src/recruitment/config/: config_validator.py
src/recruitment/db/: queries.md  recruitment.db-shm  recruitment.db-wal  repository.py
src/recruitment/db/migrations/: 001_create_raw_content.sql
src/recruitment/models/: __init__.py  db_models.py  recruitment_models.py  url.py  url_models.py
src/recruitment/prompts/: __init__.py
src/recruitment/services/: __init__.py  streamlit_app.py
src/recruitment/services/discovery/: __init__.py  main.py  url_discovery_service.py
src/recruitment/services/discovery/tests/: test_discovery.py
src/recruitment/services/llm/: llm_service.py
src/recruitment/services/processing/: __init__.py  api.py  batch_processor.py  main.py  main.py.backup  process_url.py  response_processor_functions.py  url_processor.py
src/recruitment/services/processing/archive/: process_url.py  url_processor.py
src/recruitment/utils/: __init__.py  config_validator.py  rabbitmq.py  storage.py  url_loader.py  web_crawler.py  web_crawler_wrapper.py
src/recruitment/workers/: queue_processor.py
tests/: conftest.py  test_database.py  test_llm_service.py  test_process_urls_from_queue.py  test_url_discovery.py  test_url_processing.py
tests/e2e/: test_smoke.py
tests/integration/: test_database_safety.py  test_pipeline.py
tests/integration/workers/: test_queue_processor.py
tests/unit/: test_db.py  test_imports.py  test_search.py  test_url_discovery.py  test_url_processing.py
tests/unit/db/: test_repository.py
tests/unit/services/discovery/: test_main.py  test_url_discovery_service.py
tests/unit/services/llm/: test_service.py
tests/unit/services/processing/: test_main.py  test_processing_service.py
tests_archive/: conftest.py
tests_archive/e2e/: test_smoke.py
tests_archive/integration/: test_pipeline.py
tests_archive/unit/: test_url_discovery.py  test_url_processing.py
