[project]
name = "recruitment"
version = "0.1.0"
description = "A production-ready system for discovering and processing recruitment URLs"
authors = [
    {name = "Christo Strydom", email = "christo.strydom@gmail.com"}
]
dependencies = [
    "json-logging>=1.3,<2",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2,<3",
    "aio-pika>=9.4.0",
    "apscheduler>=3.10.4",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "selenium>=4.18.0",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "prometheus-client>=0.19.0",
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.13",
    "aiosqlite>=0.21.0",
    "Crawl4AI>=0.5.0,<0.7.0",
    "dataclasses-json>=0.6.7",
    "feedparser>=6.0.11",
    "google-api-python-client>=2.162.0",
    "googlesearch-python>=1.2.3",
    "llama-index>=0.12.20",
    "llama-parse>=0.6.2",
    "lxml>=5.3.1",
    "newspaper3k>=0.2.8",
    "nltk>=3.9.1",
    "openai>=1.12.0",
    "pandas>=2.2.3",
    "pika>=1.3.1",
    "playwright>=1.51.0",
    "pypdf>=5.3.0",
    "PyYAML>=6.0.2",
    "readability-lxml>=0.8.1",
    "tiktoken>=0.9.0",
    "tldextract>=5.1.1",
    "email-validator>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "uv>=0.1.0",
]

[project.scripts]
url-discovery = "recruitment.services.discovery.main:main"
url-processing = "recruitment.services.processing.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "--cov=recruitment.db --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/recruitment"]
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "pass",
    "@abstractmethod",
    "raise ImportError",
]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["recruitment"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.ruff.lint]
select = ["F"]  # only runtime-safety rules
ignore = []     # nothing ignored because we select only F



